# GENAI-FASTAPI-Toolkot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/rules/: toolkit.mdc
app/: __init__.py  config.py  dependencies.py  main.py  middleware.py
app/core/: __init__.py  exceptions.py  gemini_client.py  rate_limiter.py  validators.py
app/models/: audio.py  image.py  multimodal.py  text.py  video.py
app/routers/: __init__.py  audio.py  health.py  image.py  multimodal.py  streaming.py  text.py  video.py
app/services/: audio_service.py  cache_service.py  image_service.py  text_service.py  video_service.py
app/utils/: file_handler.py  formatters.py  logger.py
docs/: API.md  QUICKSTART.md  SETUP.md
examples/: basic_text.py  image_analysis.py  multimodal_example.py  streaming_chat.py
tests/: __init__.py  conftest.py  test_text.py
